working with uvi

--- a/Assets/style.css
+++ b/Assets/style.css
@@ -1,5 +1,7 @@
-.jumbotron {
-    justify-content: center;
+button {
+    background-color: blue;
     color: white;
-    min-height: 20px;
 }
+
+section {
+
